# Rustalk

./: .gitattributes  .gitignore  .npmignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  install.bat  install.sh  package.json  tsconfig.json
rustalk/: Cargo.toml  README.md  build.rs
rustalk/src/: app.rs  lib.rs  main.rs  path_manager.rs  setup.rs  ui.rs  user_manager.rs
scripts/: cargo-install.rs  postinstall.ts
src/: index.ts  types.ts
tests/: cli.test.ts  cross_platform.test.ts  cross_platform_test.rs  integration_test.rs
