[workspace]
members = [
    "packages/reach",
    "packages/rus",
    "rustalk"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.24"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
