[package]
name = "rustalk"
version = "0.1.0"
edition = "2021"
description = "Secure P2P terminal chat application"
license = "Apache-2.0"
authors = ["Rustalk Team"]

[lib]
name = "rustalk_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rustalk_cli"
path = "src/main.rs"

[dependencies]
reach = { path = "../packages/reach" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true }
napi = { version = "2.0", features = ["full"] }
napi-derive = "2.0"

[build-dependencies]
napi-build = "2.0"
