[package]
name = "rustalk"
version.workspace = true
edition.workspace = true
description = "Binary installer and starter for Rustalk - delegates operations to rus CLI"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["p2p", "chat", "terminal", "cli", "rustalk"]
categories = ["command-line-utilities", "network-programming"]

# Library configuration for npm/nodejs integration
[lib]
name = "rustalk_lib"
crate-type = ["cdylib", "rlib"]

# Main binary executable
[[bin]]
name = "rustalk_cli"
path = "src/main.rs"

[dependencies]
reach = { workspace = true }
rus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# [dev-dependencies]
# Add development-only dependencies here if needed
uuid = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true }
napi = { version = "2.0", features = ["full"] }
napi-derive = "2.0"

[features]
default = []
# For publishing with optional reach:
# default = ["reach"]
# reach = ["dep:reach"]

[build-dependencies]
napi-build = "2.0"
